--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,7 @@ body {
 	}
 
 	&__menu {
+		position: relative;
 		display: flex;
 		justify-content: space-evenly;
 		align-items: center;
